cmake_minimum_required(VERSION 3.22.0)

project(nano-basic VERSION 1.0.0 LANGUAGES CXX)

file(GLOB_RECURSE NANO_BASIC_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.mm")

add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${NANO_BASIC_SOURCES})

target_include_directories(${PROJECT_NAME}
    PUBLIC
        ${NANO_SOURCES_DIRECTORY}
        "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

target_link_libraries(${PROJECT_NAME} PUBLIC nano::ui)
 
target_compile_definitions(${PROJECT_NAME} PUBLIC
    ASSETS_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}/assets"
)

if (APPLE) 
    set(ICON_FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/assets/Demo.icns")
    target_sources(${PROJECT_NAME} PRIVATE ${ICON_FILE_PATH})
    set_source_files_properties(${ICON_FILE_PATH} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
    source_group("Resources" FILES "${ICON_FILE_PATH}")

    set(NANO_PLIST_PRODUCT_NAME ${PROJECT_NAME})
    set(NANO_PLIST_EXECUTABLE_NAME ${PROJECT_NAME})
    set(NANO_PLIST_SHORT_VERSION "1.0")
    set(NANO_PLIST_VERSION "1.0.0")
    set(NANO_PLIST_ICON_FILE "Webview")
    set(NANO_PLIST_ICON_NAME "Webview")
    set(NANO_PLIST_BUNDLE_IDENTIFIER "nano.lib.examples.webview")
    set(NANO_PLIST_COPYRIGHT "Nano")
    set(NANO_PLIST_BUNDLE_INFO_STRING "Nano info")
    set(NANO_PLIST_NS_PRINCIPAL_CLASS "NSApplication")

    # file(READ "${CMAKE_CURRENT_SOURCE_DIR}/assets/extra_plist.xml" DEMO_EXTRA_PLIST_INFO)
    # set(NANO_PLIST_EXTRA_FIELDS ${DEMO_EXTRA_PLIST_INFO})

    set_target_properties(${PROJECT_NAME} PROPERTIES
        RESOURCE "${RESOURCES}"
        # FOLDER ${NANO_EXAMPLES_FOLDER_NAME}
        XCODE_GENERATE_SCHEME YES
        # RUNTIME_OUTPUT_DIRECTORY ${NANO_EXAMPLES_OUTPUT_DIRECTORY}

        XCODE_ATTRIBUTE_PRODUCT_NAME ${NANO_PLIST_PRODUCT_NAME}
        XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${NANO_PLIST_BUNDLE_IDENTIFIER}
        XCODE_ATTRIBUTE_EXECUTABLE_NAME ${NANO_PLIST_EXECUTABLE_NAME}
        XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC NO
        XCODE_ATTRIBUTE_DEAD_CODE_STRIPPING "YES"

        MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in"

        # MACOSX_BUNDLE_INFO_STRING "Demo"
        # MACOSX_BUNDLE_BUNDLE_NAME "Demo"
        # MACOSX_BUNDLE_LONG_VERSION_STRING "1.0.0"
        # MACOSX_BUNDLE_BUNDLE_VERSION "1"
        # MACOSX_BUNDLE_COPYRIGHT "Nano"    

        # CODE_SIGNING_REQUIRED "YES"
        # XCODE_ATTRIBUTE_CODE_SIGN_STYLE "Automatic"
        # XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "-"
        # XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Mac Developer"
        # XCODE_ATTRIBUTE_DEVELOPMENT_TEAM "74C2VT2Q38"
        # XCODE_ATTRIBUTE_SIGNING_CERTIFICATE "Apple Developement"
        # XCODE_ATTRIBUTE_CODE_SIGN_ENTITLEMENTS ${PROJECT_SOURCE_DIR}/app.entitlements

        
        # XCODE_ATTRIBUTE_OTHER_CODE_SIGN_FLAGS "--timestamp"
        # XCODE_ATTRIBUTE_MF_EDEN_ACCOUNT_ID "johne@synchroarts.com"
        # XCODE_ATTRIBUTE_MF_MODE "mf_protection"
        # XCODE_ATTRIBUTE_MF_WC_GUID "1651C060-5BC9-11E7-AB5C-005056875CC3"
        # XCODE_ATTRIBUTE_PACE_EDEN_DSIG_HARDEN "NO"
        # XCODE_ATTRIBUTE_PACE_EDEN_FUSION_KEEP_INTERMEDIARIES "NO"
        # XCODE_ATTRIBUTE_PACE_EDEN_WRAP_ALLOW_DEBUGGING "default"
        # XCODE_ATTRIBUTE_PACE_EDEN_WRAP_FLAGS "--removeunsupportedarchs"
        # XCODE_ATTRIBUTE_PACE_EDEN_WRAP_LOCAL_ONLY "NO"
        # XCODE_ATTRIBUTE_PACE_EDEN_WRAP_MODE "wrap"
        # XCODE_ATTRIBUTE_PACE_EDEN_WRAP_USE_INSTALLED_BINARIES "YES"
        # XCODE_ATTRIBUTE_PRESERVE_DEAD_CODE_INITS_AND_TERMS "YES"
        
        # XCODE_ATTRIBUTE_PRODUCT_NAME "Revoice Pro"
        # XCODE_ATTRIBUTE_PROVISIONING_PROFILE ""
        # XCODE_ATTRIBUTE_PROVISIONING_PROFILE_SPECIFIER ""
        # XCODE_ATTRIBUTE_CODE_SIGN_ENTITLEMENTS "Revoice Pro.entitlements"
    )

else()
    # set_target_properties(${PROJECT_NAME} PROPERTIES
    #     FOLDER ${NANO_EXAMPLES_FOLDER_NAME}
    #     RUNTIME_OUTPUT_DIRECTORY ${NANO_EXAMPLES_OUTPUT_DIRECTORY}
    # )

endif()



